# barrett

./: CMakeLists.txt  package.xml
examples/: ex10_haptics.cpp
include/barrett/bus/: bus_manager.h
include/barrett/products/: product_manager.h
include/barrett/products/detail/: low_level_wam-inl.h
programs/: zerocal.cpp
sandbox/: log_velocity.cpp  two_wams.cpp
src/: CMakeLists.txt
src/products/: hand.cpp  product_manager.cpp
