<package>
  <name>barrett</name>
  <version>1.2.1</version>
    <description >
      barrett
    </description>
    <license>GPL v2 with linking exception</license>
    <maintainer email="support@barrett.com">Barrett Technologies</maintainer>
    <author>Barrett Technologies</author>
    
    <buildtool_depend>cmake</buildtool_depend>

    <build_depend>libgsl</build_depend>
    <build_depend>libxenomai-dev</build_depend>
    <build_depend>libconfig++8-dev</build_depend>
    
    <export>
      <build_type>cmake</build_type>
    </export>

</package>

